--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <!-- <app-b-property></app-b-property> -->
 <!-- <app-c-attribute></app-c-attribute> -->
-<app-d-event></app-d-event>
+<!-- <app-d-event></app-d-event> -->
 <!-- <app-e-two-way></app-e-two-way> -->
+<!-- <app-g-ng-if></app-g-ng-if> -->
+<!-- <app-h-ng-for></app-h-ng-for> -->
+<!-- <app-i-ng-switch></app-i-ng-switch> -->
+<!-- <app-j-ng-class></app-j-ng-class> -->
+<!-- <app-k-ng-style></app-k-ng-style> -->
+<app-game-numbers></app-game-numbers>
