--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,10 @@
 <!-- <app-i-ng-switch></app-i-ng-switch> -->
 <!-- <app-j-ng-class></app-j-ng-class> -->
 <!-- <app-k-ng-style></app-k-ng-style> -->
-<app-game-numbers></app-game-numbers>
+<!-- <app-game-numbers></app-game-numbers> -->
+<!-- <app-n-input *ngFor="let product of products" 
+    [in_product]="product" 
+    
+></app-n-input> -->
+
+<app-o-output (answerRequest)="appComponentAnswer($event)"></app-o-output>
