app-crud-layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,7 @@
     [in_product]="product" 
     
 ></app-n-input> -->
-
-<app-o-output (answerRequest)="appComponentAnswer($event)"></app-o-output>
+<!-- <app-o-output (answerRequest)="appComponentAnswer($event)"></app-o-output> -->
+<!-- <app-menu></app-menu> -->
+<nav class="navbar navbar-expand-lg bg-light" app-menu></nav>
+<app-list></app-list>
