--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,7 @@
 ></app-n-input> -->
 <!-- <app-o-output (answerRequest)="appComponentAnswer($event)"></app-o-output> -->
 <!-- <app-menu></app-menu> -->
-<nav class="navbar navbar-expand-lg bg-light" app-menu></nav>
-<app-list></app-list>
+<!-- <nav class="navbar navbar-expand-lg bg-light" app-menu></nav>
+<app-list></app-list> -->
+<!-- <app-u-template-driven></app-u-template-driven> -->
+<app-v-data-driven></app-v-data-driven>
