--- a/src/app/app-CRUD/templates/edit.component.html
+++ b/src/app/app-CRUD/templates/edit.component.html
@@ -1,1 +1,24 @@
 <p>edit works!</p>
+{{ product | json }}
+
+<form [formGroup]="formProfile" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+        <label for="name">Full name</label>
+        <input type="text" id="name" class="form-control" 
+        formControlName="name"
+        name="name"
+        >
+        <small *ngIf="formProfile.controls['name'].invalid && (formProfile.controls['name'].dirty || formProfile.controls['name'].touched)" class="form-text text-danger">Username is required</small>
+
+      </div>
+    <div class="form-group">
+      <label for="price">price address</label>
+      <input type="text" class="form-control" id="price" 
+      formControlName="price" 
+      name="price">
+      <small *ngIf="formProfile.controls['price'].invalid && (formProfile.controls['price'].dirty || formProfile.controls['price'].touched)" class="form-text text-danger">price is required</small>
+
+    </div>
+    <button [disabled]="formProfile.invalid" type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  
