--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,6 @@
 <!-- <nav class="navbar navbar-expand-lg bg-light" app-menu></nav>
 <app-list></app-list> -->
 <!-- <app-u-template-driven></app-u-template-driven> -->
-<app-v-data-driven></app-v-data-driven>
+<!-- <app-v-data-driven></app-v-data-driven> -->
+<!-- <app-list></app-list> -->
+<router-outlet></router-outlet>
