--- a/src/app/product/templates/list.component.html
+++ b/src/app/product/templates/list.component.html
@@ -5,15 +5,15 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Name</th>
-                <th scope="col">Price</th>
+                <th scope="col">City</th>
                 <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let product of products; let i = index">
-                <th scope="row">#</th>
+                <th scope="row">{{ product.id }}</th>
                 <td>{{ product.name }}</td>
-                <td>{{ product.price }}</td>
+                <td>{{ product.city }}</td>
                 <td>
                     <a class="btn btn-info" [routerLink]="['/products/edit',i]">Edit</a>
                 </td>
